<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.authentication.ChooseUserTypeActivity">

<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal">

    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_logo_500x333" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/welcome_to"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:layout_above="@+id/tvCustomerApp"
        android:layout_below="@+id/llHeader"
        android:gravity="center"
        android:padding="16dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnIndependent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="@style/My_Button"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/independent" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnBusiness"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            style="@style/My_Button"
            android:text="@string/business"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tvCustomerApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextView.Medium"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:text="@string/click_here_for_social_app"/>

</RelativeLayout>
