<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.authentication.AddAddressActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/ll_picAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="?android:selectableItemBackground"
            android:padding="5dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/location"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                style="@style/TextView"
                android:textSize="16sp"
                android:text="@string/pick_your_place"/>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_locality"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/txtinputError_appearance">

            <EditText
                android:id="@+id/ed_locality"
                style="@style/My_Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="3"
                android:scrollbars="vertical"
                android:maxLines="3"
                android:hint="@string/line_of_address1"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_flat"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/txtinputError_appearance">

            <EditText
                android:id="@+id/ed_opetionalAddress"
                style="@style/My_Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/line_of_address2"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_city"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:errorTextAppearance="@style/txtinputError_appearance">

            <EditText
                android:id="@+id/ed_city"
                style="@style/My_Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/town_city"
                android:enabled="false"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_pincode"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/txtinputError_appearance">

            <EditText
                android:id="@+id/ed_pinCode"
                style="@style/My_Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postal_code"
                android:inputType="textPostalAddress" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_state"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_marginTop="16dp"
            app:errorTextAppearance="@style/txtinputError_appearance">

            <EditText
                android:id="@+id/ed_state"
                style="@style/My_Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state"
                android:enabled="false"
                android:inputType="textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_country"
            style="@style/tvStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            app:errorTextAppearance="@style/txtinputError_appearance">

            <EditText
                android:id="@+id/ed_country"
                style="@style/My_Edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/country"
                android:enabled="false"
                android:inputType="textPostalAddress" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



</RelativeLayout>
