<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".modules.profile_setup.activity.BookingTypeActivity">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/actionbar_fill_business_profile"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerLayout"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/welcome_to_koobi"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_gray"
            android:textSize="15sp"
            android:paddingLeft="@dimen/margin_left"
            android:paddingRight="@dimen/margin_right"
            android:paddingEnd="@dimen/margin_right"
            android:paddingStart="@dimen/margin_left"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/you_just_need_to_put_some_more_information_before_you_start_taking_bookings"
            android:gravity="center"/>


        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_semibold"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/what_type_of_booking_will_you_take"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/gray_line"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="35dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvInCall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/incall"
                android:textSize="18sp"
                android:background="@color/white"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/roboto_regular"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_line"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvOutCall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/outcall"
                android:textSize="18sp"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/roboto_regular"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_line"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/tvBoth"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="@string/both"
                android:textSize="18sp"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/roboto_regular"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@color/gray_line"
            />


    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        style="@style/My_Button.Invert"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/continue_txt"
        android:visibility="visible"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        />

</RelativeLayout>