<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg_color"
    android:fitsSystemWindows="true"
    tools:context=".modules.business_setup.new_add_staff.AddStaffDetailActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout_bookingdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/rlContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        >

        <LinearLayout
            android:id="@+id/llDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/gray_broder_white_bg"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvJobTitle"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_job_title"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/tvServices"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:drawableRight="@drawable/black_down_arrow_ico"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:text="@string/text_services"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/tvSocialMedia"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:hint="@string/social_media_access"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="2dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/tvHoliday"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center_vertical"
                android:hint="@string/holiday_allocation"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_color"
                android:textSize="14sp"
                />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/llSetWh"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/llDetail"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gray_broder_white_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:fontFamily="@font/roboto_medium"
                android:paddingLeft="10dp"
                android:text="@string/show_working_hours"
                android:textColor="@color/text_color"
                android:textSize="14sp"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnEditWhs"
                style="@style/My_Button_Primary"
                android:layout_width="60dp"
                android:layout_height="26dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="14dp"
                android:text="@string/show"
                />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>